7903636: update jextract sample scripts for --source option removal
Co-authored-by: Jorn Vernee <jvernee@openjdk.org>
Reviewed-by: mcimadamore