@@ -1,4 +1,3 @@
 java --enable-native-access=ALL-UNNAMED \
-   --source=22 --enable-preview \
    -Djava.library.path=/usr/local/Cellar/lp_solve/5.5.2.11/lib \
     LpSolveDemo.java
