@@ -3,7 +3,6 @@ jextract --output src -t org.pcre \
   --header-class-name Pcre \
   -DPCRE2_CODE_UNIT_WIDTH=8 \
   --library pcre2-8 \
-  --source \
   /usr/local/opt/pcre2/include/pcre2.h
 
-javac --enable-preview --source=22 -d . src/org/pcre/*.java
+javac --source=22 -d . src/org/pcre/*.java
