@@ -3,6 +3,5 @@ if [[ -z "${ANACONDA3_HOME}" ]]; then
 fi
 
 java --enable-native-access=ALL-UNNAMED \
-    --enable-preview --source=22 \
     -Djava.library.path=${ANACONDA3_HOME}/lib \
     PythonMain.java
