@@ -1,5 +1,4 @@
 
 java --enable-native-access=ALL-UNNAMED \
-    --enable-preview --source=22 \
     PanamaTime.java
 
